tests/compile_fail/with_settings/bump_scope/borrow/guaranteed_allocated_increase.stderr
error[E0080]: evaluation panicked: can't turn a non-guaranteed-allocated bump allocator into a guaranteed-allocated one
 --> src/bump_scope.rs
  |
  | /             assert!(
  | |                 NewS::GUARANTEED_ALLOCATED <= S::GUARANTEED_ALLOCATED,
  | |                 "can't turn a non-guaranteed-allocated bump allocator into a guaranteed-allocated one"
  | |             );
  | |_____________^ evaluation of `bump_scope::BumpScope::<'_, bump_scope::alloc::Global, bump_scope::settings::BumpSettings<1, true, false>>::borrow_with_settings::<bump_scope::settings::BumpSettings>::{constant#0}` failed here

note: erroneous constant encountered
 --> src/bump_scope.rs
  |
  | /         const {
  | |             assert!(NewS::UP == S::UP, "can't change `UP` setting");
  | |
  | |             assert!(
... |
  | |             );
  | |         }
  | |_________^

note: the above error was encountered while instantiating `fn BumpScope::<'_, bump_scope::alloc::Global, BumpSettings<1, true, false>>::borrow_with_settings::<BumpSettings>`
  --> tests/compile_fail/with_settings/bump_scope/borrow/guaranteed_allocated_increase.rs:11:5
   |
11 |     bump.borrow_with_settings()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
